<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@mipmap/bg1"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/enableLockLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:id="@+id/lockIcon"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/home_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/enableLocktext"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_toRightOf="@+id/lockIcon"
                    android:layout_centerInParent="true"
                    style="@style/TextViewStyle1"
                    android:text="@string/enablelocktxt"

                    />
                <CheckBox
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/dp10"
                    android:id="@+id/enable_disable_check"
                    android:layout_alignParentRight="true"
                    android:buttonTint="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp15"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton" />
                <!--
                <RadioGroup
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_marginBottom="@dimen/dp15"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:checkedButton="@+id/off_radio"
                    android:id="@+id/radio_toggle"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/dp15"
                    android:background="@drawable/pink_out_line"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:id="@+id/off_radio"
                        android:background="@drawable/toggle_widget_background"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Off"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:id="@+id/on_radio"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="On"
                        android:textColor="@color/white" />
                </RadioGroup>
               -->




                <View  android:layout_alignParentBottom="true" style="@style/Divider"/>
            </RelativeLayout>
            <RelativeLayout
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/changePinLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:id="@+id/passIcon"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/home_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/pinTxtview"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_toRightOf="@+id/passIcon"
                    style="@style/TextViewStyle1"
                    android:text="@string/change_pin"
                    />



                <View  android:layout_alignParentBottom="true" style="@style/Divider"/>
            </RelativeLayout>

            <RelativeLayout
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/wallPaperLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:id="@+id/wallPaperIcon"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/home_wall_peper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/wallPaperText"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_toRightOf="@+id/wallPaperIcon"
                    style="@style/TextViewStyle1"
                    android:text="@string/change_wall"
                    />

                <View  android:layout_alignParentBottom="true" style="@style/Divider"/>
            </RelativeLayout>

            <RelativeLayout
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/gallleryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:id="@+id/galleryIcon"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/home_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/galleryTxt"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_toRightOf="@+id/galleryIcon"
                    style="@style/TextViewStyle1"
                    android:text="@string/gallery"
                    />


                <View  android:layout_alignParentBottom="true" style="@style/Divider"/>
            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:id="@+id/moreAppsIcon"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/home_gift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_toRightOf="@+id/moreAppsIcon"
                    style="@style/TextViewStyle1"
                    android:text="@string/moreapps"
                    />


                <View  android:layout_alignParentBottom="true" style="@style/Divider"/>
            </RelativeLayout>


            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:id="@+id/musicIcon"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/home_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_toRightOf="@+id/musicIcon"
                    style="@style/TextViewStyle1"
                    android:text="@string/music"
                    />


                <View  android:layout_alignParentBottom="true" style="@style/Divider"/>
            </RelativeLayout>




            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_centerInParent="true"
                    android:id="@+id/aboutIcon"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/home_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_toRightOf="@+id/aboutIcon"
                    style="@style/TextViewStyle1"
                    android:text="@string/about"
                    />


                <View  android:layout_alignParentBottom="true" style="@style/Divider"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>



    <RelativeLayout
        android:background="@color/colorAccent"
        android:gravity="center"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/dp10"
            android:text="add will be here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>